--- a/templates/home.html
+++ b/templates/home.html
@@ -43,11 +43,13 @@
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
                 <!-- List of all the tasks that have completed -->
+                {% for task in completed_tasks%}
                 <div class="card m-1">
                     <div class="card-body">
-                        This is the completed task.
+                        {{task.task}}
                     </div>
                 </div>
+                {% endfor%}
             </div>
         </div>
         <div class="row">
