Added functionlity for update and delete in todo app

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,9 +31,9 @@
                     <div class="card-body">
                         {{task.task}}
                         <span style="position: relative; float: right;">
-                            <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
-                            <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                            <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
+                            <a href = "{% url "mark_as_done" task.pk%}"class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
+                            <a href= "{%url "Delete_task" task.pk%}"class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                            <a href = "{% url "Edit_task" task.pk %}"class="btn btn-primary"><i class="fa fa-pencil"></i></a>
                         </span>
                     </div>
                 </div>
@@ -47,6 +47,7 @@
                 <div class="card m-1">
                     <div class="card-body">
                         {{task.task}}
+                        <a href = "{% url "mark_as_Undone" task.pk%}"class="btn btn-success"><i class="fa fa-check"></i> Mark as undone</a>
                     </div>
                 </div>
                 {% endfor%}
